Bruk av Gradle installDist plugin og bruke generert script for å starte opp applikasjon