@@ -1,11 +1,22 @@
-FROM eclipse-temurin:17-alpine
+FROM eclipse-temurin:17 as jre-build
 
-COPY app/build/libs/app-all.jar app.jar
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules ALL-MODULE-PATH \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
 
+# Runtime
+FROM debian:buster-slim
 ENV TZ="Europe/Oslo"
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=jre-build /javaruntime $JAVA_HOME
 
-RUN addgroup -S app && adduser -S -G app app
+COPY ./build/install/* /
 
-USER app
-
-CMD ["java", "-jar", "app.jar"]
+USER nobody
+CMD ["arbeidsgiver-mock-enhetsregisteret"]
